Use a smaller package for testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
     - "2.7"
 env:
-    - PACKAGE=lxml VERSION=3.3.5
+    - PACKAGE=vdirsyncer VERSION=0.2.1
 
 install: pip install wheel
 
