--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: python
+
 python:
     - "2.7"
 env:
-    - PACKAGE=vdirsyncer VERSION=0.2.1
+    matrix:
+        - PACKAGE=vdirsyncer VERSION=0.2.1
+    global:
+        secure: fwk013cuhbsbGjadDJfWNf7/mMAUb5Pgqw1J5QB0Ob37jKPCxJJN2SsWeRqaC+mrXsiBZ43DqMQ+n+U20cxPK15XRUip/fXHsGDpzUwl79nIUovgrtWWtVaj6RTtuk8httDWpaM3SE+Jy2UAzkOljzuGK6h7KwGQ8hSTvQjYPak=
 
 install: pip install wheel
 
 script: sh build.sh
-
-secure: "Wmnjp82EEkIoE795dQpQV+fhWz3NTPVaNtXJ6qVu5jbAiYE0ouWtx/jT4dw/LXaXuXlzYG37CzeWUuzS8KxvIXFwlb05cxhKgZjMoFBSZQMhUbVDNdiIuIFT+zHUpvNJYMtifWr52xca+anRJcgErJ42+4306TwvB3WODd1XFz0="
