--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - "2.7"
 env:
     matrix:
-        - PACKAGE=pyyaml VERSION=3.11
+        - PACKAGE=coverage VERSION=3.7.1
     global:
         secure: fwk013cuhbsbGjadDJfWNf7/mMAUb5Pgqw1J5QB0Ob37jKPCxJJN2SsWeRqaC+mrXsiBZ43DqMQ+n+U20cxPK15XRUip/fXHsGDpzUwl79nIUovgrtWWtVaj6RTtuk8httDWpaM3SE+Jy2UAzkOljzuGK6h7KwGQ8hSTvQjYPak=
 
