--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 env:
     matrix:
         - PACKAGE=coverage VERSION=3.7.1
+        - PACKAGE=lxml VERSION=3.3.5
+        - PACKAGE=pyyaml VERSION=3.11
     global:
         secure: fwk013cuhbsbGjadDJfWNf7/mMAUb5Pgqw1J5QB0Ob37jKPCxJJN2SsWeRqaC+mrXsiBZ43DqMQ+n+U20cxPK15XRUip/fXHsGDpzUwl79nIUovgrtWWtVaj6RTtuk8httDWpaM3SE+Jy2UAzkOljzuGK6h7KwGQ8hSTvQjYPak=
 
