--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,15 @@ python:
     - "3.4"
 env:
     matrix:
+        # Vdirsyncer
         - PACKAGE=coverage VERSION=3.7.1
         - PACKAGE=lxml VERSION=3.3.5
         - PACKAGE=pyyaml VERSION=3.11
+        # Werkzeug
+        - PACKAGE=pyopenssl VERSION=0.14
+        - PACKAGE=cffi VERSION=0.8.6
+        - PACKAGE=cryptography VERSION=0.5.4
+        - PACKAGE=pycparser VERSION=2.10
     global:
         secure: fwk013cuhbsbGjadDJfWNf7/mMAUb5Pgqw1J5QB0Ob37jKPCxJJN2SsWeRqaC+mrXsiBZ43DqMQ+n+U20cxPK15XRUip/fXHsGDpzUwl79nIUovgrtWWtVaj6RTtuk8httDWpaM3SE+Jy2UAzkOljzuGK6h7KwGQ8hSTvQjYPak=
 
