--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,10 @@ env:
         # Werkzeug
         - PACKAGE=greenlet VERSION=0.4.3
         - PACKAGE=pyopenssl VERSION=0.14
-        - PACKAGE=cffi VERSION=0.8.6
-        - PACKAGE=cryptography VERSION=0.5.4
-        - PACKAGE=pycparser VERSION=2.10
+        -   PACKAGE=six VERSION=1.7.3
+        -     PACKAGE=cryptography VERSION=0.5.4
+        -   PACKAGE=cffi VERSION=0.8.6
+        -     PACKAGE=pycparser VERSION=2.10
     global:
         secure: fwk013cuhbsbGjadDJfWNf7/mMAUb5Pgqw1J5QB0Ob37jKPCxJJN2SsWeRqaC+mrXsiBZ43DqMQ+n+U20cxPK15XRUip/fXHsGDpzUwl79nIUovgrtWWtVaj6RTtuk8httDWpaM3SE+Jy2UAzkOljzuGK6h7KwGQ8hSTvQjYPak=
 
